navigation to fav band web

--- a/index.html
+++ b/index.html
@@ -2,14 +2,30 @@
 <head>
     <meta content="utf-8">
     <meta name="viewport" content="width=device-widt">
-    <title>My favorite Band Project1</title>
+    <link rel="stylesheet" type="text/css" href="index.css">
+    <title>favorite Band Project1</title>
 </head>
 <body>
-    <h1>Westlife Band</h1>
-    <h2>About</h2>
-    <p>my favorite band is westlife where the band comoses of the following guys</p>
-    <ul>
-        <li>John</li>
-    </ul>
+    <div class="main-content">
+        <div class="navigation">
+            <p class="logo">Hillsong Band</p>
+            <ul>
+                <a href=""><li>Home</li></a>
+                <a href=" "><li>About</li></a>
+                <a href=" "><li>Songs</li></a>
+                <a href=""><li>Watch Youtube</li></a>
+            </ul>
+        </div>
+        <div class="image">
+
+        </div>
+        <div class="intro">
+
+        </div>
+        <div class="footer1">
+            <p>Copyright &COPY;2021 Moringa School.<span>  All Rights Reserved</span></p>
+            <p>Developer <span class="joe">Joseph Gakumo Munyui</span></p>
+        </div>
+     </div>    
 </body>
 </html>
