first page linked

--- a/index.html
+++ b/index.html
@@ -8,23 +8,30 @@
 <body>
     <div class="main-content">
         <div class="navigation">
-            <p class="logo">Hillsong Band</p>
+            <a href="index.html"><p class="logo">Hillsong Band</p></a>
             <ul>
-                <a href=""><li>Home</li></a>
-                <a href=" "><li>About</li></a>
-                <a href=" "><li>Songs</li></a>
-                <a href=""><li>Watch Youtube</li></a>
+                <a href="home.html"><li>Home</li></a>
+                <a href="about.html"><li>About</li></a>
+                <a href=" songs.html"><li>Songs</li></a>
+                <a href="youtube.html"><li>Watch Youtube</li></a>
             </ul>
         </div>
         <div class="image">
-
+            <h1>Hillsong Worship Band Team</h1>
+            <img src="image/hillsong.jpg" alt="Hillsong Band Team">
         </div>
         <div class="intro">
-
-        </div>
+            <div class="intro2">
+                <h2>Introduction</h2>
+                <h1>Hillsong Worship</h1>
+                <p >Is an <strong>Australian</strong> praise and worship  band that originated from <span>Sydney</span> in the year <span>1983</span>
+                at Hillsong Church. Have been ranked best by the <em>Billboard magazine</em> charts in US, with their best song <strong>"What a Beautiful Name".</strong></p>
+           
+            </div>
+             </div>
         <div class="footer1">
             <p>Copyright &COPY;2021 Moringa School.<span>  All Rights Reserved</span></p>
-            <p>Developer <span class="joe">Joseph Gakumo Munyui</span></p>
+            <p>Developer <span class="joe">:Joseph Gakumo Munyui</span></p>
         </div>
      </div>    
 </body>
