modified web page

--- a/index.html
+++ b/index.html
@@ -20,15 +20,28 @@
             <h1>Hillsong Worship Band Team</h1>
             <img src="image/hillsong.jpg" alt="Hillsong Band Team">
         </div>
-        <div class="intro">
-            <div class="intro2">
+        <div class="introduction">
+            <div class="intro">
                 <h2>Introduction</h2>
                 <h1>Hillsong Worship</h1>
-                <p >Is an <strong>Australian</strong> praise and worship  band that originated from <span>Sydney</span> in the year <span>1983</span>
-                at Hillsong Church. Have been ranked best by the <em>Billboard magazine</em> charts in US, with their best song <strong>"What a Beautiful Name".</strong></p>
-           
+                <p >Is an <strong>Australian</strong> praise and worship  band that originated from 
+                    <span>Sydney</span> in the year <span>1983</span>
+                at Hillsong Church. The band has been ranked best by the <em>Billboard magazine</em> charts in US, with their best song 
+                <strong>"What a Beautiful Name"</strong> that was presented on 2016 making the band reach <em>platinum stage in US.</em>
+                The band members are <span id="members">Darlene Zschech, Marty Sampson, Brooke Fraser, Reuben Morgan and Taya Smith</span></p>
+           </div>
+            <div class="intro" id="intro1">
+                <h3>Hillsongs worship band</h3>
+                <p >The band has the following songs</p>
+                <ol type="I">
+                    <li>What a Beautiful name</li>
+                    <li>I Surrender</li>
+                    <li>Oceans(where Feet May Fail)</li>
+                    <li>Who You Say I Am</li>
+                    <li>No One But You</li>
+                </ol>
             </div>
-             </div>
+        </div>
         <div class="footer1">
             <p>Copyright &COPY;2021 Moringa School.<span>  All Rights Reserved</span></p>
             <p>Developer <span class="joe">:Joseph Gakumo Munyui</span></p>
