--- a/about.html
+++ b/about.html
@@ -2,14 +2,19 @@
 <head>
     <meta content="utf-8">
     <meta name="viewport" content="width=device-width">
-    <title>Home</title>
-    <link rel="stylesheet" href="home.css">
+    <title>About</title>
+    <link rel="stylesheet" href="about.css">
 </head>
 <div class="main-content">
     <div class="marquee">
         <div class="intro">
+            <h1 id="h22">Welcome to this page where we shall discuss more about the members of this greate band</h1>
             <h2>Introduction</h2>
+            <h2 id="icon">
+                <a href="index.html">Go back</a>
+            </h2>
             <h1>Hillsong Worship</h1>
+            
             <p>Is an <strong>Australian</strong> praise and worship  band that originated from 
                 <span>Sydney</span> in the year <span>1983</span>
             at Hillsong Church. The band has been ranked best by the <em>Billboard magazine</em> charts in US, with their best song 
@@ -17,38 +22,38 @@
             The band members are <span id="members">Darlene Zschech, Marty Sampson, Brooke Fraser, Reuben Morgan and Taya Smith</span></p>
        </div>
         <h1 id="bio">Biography</h1>
+        <div class="sub">
             <img src="image/taya.png" alt="Taya Smith" class="bio">
             <p class="taya">Taya Smith was born in <strong>1989</strong> in <em>New South Wales, Australia.</em></p><br>
-            <p class="taya1">Smith is a celebrity singer and has the following albums</p>
-            <ol class="taya1" id="u">
+            <p class="taya1">Smith is a celebrity singer and she does the Hillsong worship songs</p>
+            <ol class="taya1" id="u">has the following albums
                 <li>Wonder (2017)<a href="https://www.youtube.com/watch?v=ylddMdMcW9o">  Click here to watch</a></li>
                 <li>Zion (2013) <a href="https://www.youtube.com/watch?v=wZ9tfCUZTd4"> Watch from Youtube</a></li>
                 <li>Dirt and Grace <a href="https://www.youtube.com/watch?v=-FAsEB6pRtc"> Watch here</a></li>
             </ol>
+        </div>
+        <div class="sub">
             <img src="image/darlene.jpg" alt="Darlene Zschech" class="bio">
             <p class="taya">Darlene was born in  <strong>1965</strong> in <span>Brisbane, Australia</span></p><br>
-            <p class="taya1">Darlene Zschech is a celebrity singer and has the following albums</p>
-            <ol class="taya1" id="u">
+            <p class="taya1">Darlene Zschech is a celebrity singer and she is among the best Hillsong Worship band in the group./p>
+            <ol class="taya1" id="u">has the following albums
                 <li>Revealing Jesus<a href="https://www.youtube.com/watch?v=6OIih5o86Ko">  Click here to watch</a></li>
                 <li>Kiss of Heaven<a href="https://www.youtube.com/watch?v=-IzN-zmAXQU"> Watch from Youtube</a></li>
                 <li>Here I'am <a href="https://www.youtube.com/watch?v=dQfEhnc3h5w"> Watch here</a></li>
             </ol>
+        </div>
+        <div class="sub">
             <img src="image/marty.jpg" alt="Marty Sampson" class="bio">
             <p class="taya">Marty Sampson was born in  <strong>1979</strong> in <span>Sydney, Australia</span></p><br>
-            <p class="taya1">Marty Sampson s an Australian singer-songwriter, musician and former worship leader at the Hillsong Church in Sydney. From the late 1990s until 2019 
-                he featured on the United Live albums and was one of the original Hillsong United band's worship, has the following albums</p>
-            <ol class="taya1" id="u">
+            <p class="taya1">Marty Sampson s an Australian singer-songwriter, musician and former worship leader at the Hillsong Church in Sydney.<pre>From the late 1990s until 2019 
+                he featured on the United Live albums and was one of the original Hillsong United band's worship </pre> </p>
+            <ol class="taya1" id="u">has the following albums
                 <li>Saviour King<a href="https://www.youtube.com/watch?v=Ljxi1_Eo48w">  Click here to watch</a></li>
                 <li>The I Heart Revolution<a href="https://www.youtube.com/watch?v=l3w_bx9MY6o"> Watch from Youtube</a></li>
             </ol>
+        </div>     
     </div>
-    
 </div>
-
-<div class="introduction">
-    <div>
-
-    </div>
     <div class="intro2" id="intro1">
         <h3>Hillsongs worship band</h3>
         <p class="cen">The band has the following songs</p>
