--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
             <ul>
                 <a href="index.html" target="_blank"><li>Home</li></a>
                 <a href="about.html"><li>About</li></a>
-                <a href="about.html"><li>Songs</li></a>
-                <a href="youtube.html"><li>Watch Youtube</li></a>
+                <a href="songs.html"><li>Songs</li></a>
+                <a href="songs.html"><li>Watch Youtube</li></a>
             </ul>
         </div>
         <div class="image">
@@ -41,7 +41,7 @@
                         <li>Dirt and Grace <a href="https://www.youtube.com/watch?v=-FAsEB6pRtc"> Watch here</a></li>
                     </ol>
                     <img src="image/darlene.jpg" alt="Darlene Zschech" class="bio">
-                    <p class="taya">Darlene was born in  <strong>1965</strong> in <span>Brisbane, Australia</span></p><br>
+                    <p class="taya">Darlene was born in  <strong>1965</strong> in <span class="b">Brisbane, Australia</span></p><br>
                     <p class="taya1">Darlene Zschech is a celebrity singer and has the following albums</p>
                     <ol class="taya1" id="u">
                         <li>Revealing Jesus<a href="https://www.youtube.com/watch?v=6OIih5o86Ko">  Click here to watch</a></li>
@@ -49,7 +49,7 @@
                         <li>Here I'am <a href="https://www.youtube.com/watch?v=dQfEhnc3h5w"> Watch here</a></li>
                     </ol>
                     <img src="image/marty.jpg" alt="Marty Sampson" class="bio">
-                    <p class="taya">Marty Sampson was born in  <strong>1979</strong> in <span>Sydney, Australia</span></p><br>
+                    <p class="taya">Marty Sampson was born in  <strong>1979</strong> in <span class="b">Sydney, Australia</span></p><br>
                     <p class="taya1">Marty Sampson s an Australian singer-songwriter, musician and former worship leader at the Hillsong Church in Sydney. From the late 1990s until 2019 
                         he featured on the United Live albums and was one of the original Hillsong United band's worship, has the following albums</p>
                     <ol class="taya1" id="u">
