--- a/about.html
+++ b/about.html
@@ -8,20 +8,15 @@
 <div class="main-content">
     <div class="marquee">
         <div class="intro">
-            <h1 id="h22">Welcome to this page where we shall discuss more about the members of this greate band</h1>
+            <h1 id="h22">Biography and Introduction <a href="index.html" class="icon">Previous Page</a></h1>
             <h2>Introduction</h2>
-            <h2 id="icon">
-                <a href="index.html">Go back</a>
-            </h2>
-            <h1>Hillsong Worship</h1>
-            
             <p>Is an <strong>Australian</strong> praise and worship  band that originated from 
                 <span>Sydney</span> in the year <span>1983</span>
             at Hillsong Church. The band has been ranked best by the <em>Billboard magazine</em> charts in US, with their best song 
             <strong>"What a Beautiful Name"</strong> that was presented on 2016 making the band reach <em>platinum stage in US.</em>
             The band members are <span id="members">Darlene Zschech, Marty Sampson, Brooke Fraser, Reuben Morgan and Taya Smith</span></p>
        </div>
-        <h1 id="bio">Biography</h1>
+       
         <div class="sub">
             <img src="image/taya.png" alt="Taya Smith" class="bio">
             <p class="taya">Taya Smith was born in <strong>1989</strong> in <em>New South Wales, Australia.</em></p><br>
@@ -54,21 +49,6 @@
         </div>     
     </div>
 </div>
-    <div class="intro2" id="intro1">
-        <h3>Hillsongs worship band</h3>
-        <p class="cen">The band has the following songs</p>
-        <ol type="I">
-            <li>What a Beautiful name</li>
-            <li>I Surrender</li>
-            <li>Oceans(where Feet May Fail)</li>
-            <li>Who You Say I Am</li>
-            <li>No One But You</li>
-        </ol>
-    </div>
-</div>
-<div class="footer1">
-    <p>Copyright &COPY;2021 Moringa School.<span>  All Rights Reserved</span></p>
-    <p>Developer <span class="joe">:Joseph Gakumo Munyui</span></p>
 </div>
 </div>
 </html>
