--- a/songs.html
+++ b/songs.html
@@ -8,7 +8,7 @@
 <body class="elev">
     <div class="elevation">
         <div class="intro2" id="intro1">
-            <h3>Hillsongs worship band Songs and Album</h3>
+            <h3>Hillsongs worship band Songs and Album <a href="index.html" class="icon">Previous Page</a></h3>
            
             <ol type="I" class="song">
                 <li>What a Beautiful name <a href="https://youtu.be/0IORSWpGcMU"> Watch here</a></li>
