--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 <body>
     <div class="main-content">
         <div class="navigation">
-            <a href="index.html"><p class="logo">Hillsong Band</p></a>
             <ul>
+                <a href="index.html" class="logo" target="_self"><li id="logo">HillsongBand</li></a>
                 <a href="index.html" target="_blank"><li>Home</li></a>
                 <a href="about.html"><li>About</li></a>
                 <a href="songs.html"><li>Songs</li></a>
@@ -17,47 +17,10 @@
             </ul>
         </div>
         <div class="image">
-            <h1>Hillsong Worship Band Team</h1>
-            <marquee behavior="scroll" direction="right" scrollamount="12" width="60%">
+            <h1>Hillsong Worship Band Team Photo</h1>
+            <marquee behavior="scroll" direction="right" scrollamount="12" width="100%">
                 <img src="image/hillsong.jpg" alt="Hillsong Band Team">
-            </marquee>  
-            <div class="marquee">
-                <div class="intro">
-                    <h2>Introduction</h2>
-                    <h1>Hillsong Worship</h1>
-                    <p>Is an <strong>Australian</strong> praise and worship  band that originated from 
-                        <span>Sydney</span> in the year <span>1983</span>
-                    at Hillsong Church. The band has been ranked best by the <em>Billboard magazine</em> charts in US, with their best song 
-                    <strong>"What a Beautiful Name"</strong> that was presented on 2016 making the band reach <em>platinum stage in US.</em>
-                    The band members are <span id="members">Darlene Zschech, Marty Sampson, Brooke Fraser, Reuben Morgan and Taya Smith</span></p>
-               </div>
-                <h1 id="bio">Biography</h1>
-                    <img src="image/taya.png" alt="Taya Smith" class="bio">
-                    <p class="taya">Taya Smith was born in <strong>1989</strong> in <em>New South Wales, Australia.</em></p><br>
-                    <p class="taya1">Smith is a celebrity singer and has the following albums</p>
-                    <ol class="taya1" id="u">
-                        <li>Wonder (2017)<a href="https://www.youtube.com/watch?v=ylddMdMcW9o">  Click here to watch</a></li>
-                        <li>Zion (2013) <a href="https://www.youtube.com/watch?v=wZ9tfCUZTd4"> Watch from Youtube</a></li>
-                        <li>Dirt and Grace <a href="https://www.youtube.com/watch?v=-FAsEB6pRtc"> Watch here</a></li>
-                    </ol>
-                    <img src="image/darlene.jpg" alt="Darlene Zschech" class="bio">
-                    <p class="taya">Darlene was born in  <strong>1965</strong> in <span class="b">Brisbane, Australia</span></p><br>
-                    <p class="taya1">Darlene Zschech is a celebrity singer and has the following albums</p>
-                    <ol class="taya1" id="u">
-                        <li>Revealing Jesus<a href="https://www.youtube.com/watch?v=6OIih5o86Ko">  Click here to watch</a></li>
-                        <li>Kiss of Heaven<a href="https://www.youtube.com/watch?v=-IzN-zmAXQU"> Watch from Youtube</a></li>
-                        <li>Here I'am <a href="https://www.youtube.com/watch?v=dQfEhnc3h5w"> Watch here</a></li>
-                    </ol>
-                    <img src="image/marty.jpg" alt="Marty Sampson" class="bio">
-                    <p class="taya">Marty Sampson was born in  <strong>1979</strong> in <span class="b">Sydney, Australia</span></p><br>
-                    <p class="taya1">Marty Sampson s an Australian singer-songwriter, musician and former worship leader at the Hillsong Church in Sydney. From the late 1990s until 2019 
-                        he featured on the United Live albums and was one of the original Hillsong United band's worship, has the following albums</p>
-                    <ol class="taya1" id="u">
-                        <li>Saviour King<a href="https://www.youtube.com/watch?v=Ljxi1_Eo48w">  Click here to watch</a></li>
-                        <li>The I Heart Revolution<a href="https://www.youtube.com/watch?v=l3w_bx9MY6o"> Watch from Youtube</a></li>
-                    </ol>
-            </div>
-            
+            </marquee>             
         </div>
 
         <div class="introduction">
